--- a/r4babs1/week-9/study_after_workshop.qmd
+++ b/r4babs1/week-9/study_after_workshop.qmd
@@ -11,15 +11,14 @@ format:
 
 # Set up
 
-If you have just opened RStudio you will want to load the packages and import 
-the data.
+If you have just opened RStudio you will want to load the packages and
+import the data.
 
 ```{r}
 #| code-fold: false
 library(tidyverse)
 library(readxl)
 ```
-
 
 1.  💻 Summarise and plot the `pigeons` dataframe appropriately.
 
@@ -60,37 +59,44 @@ ggplot() +
 
 ```
 
+2.  💻 The data in [blood.csv](data-raw/blood.csv) are measurements of
+    several blood parameters from fifty people with [Crohn's
+    disease](https://en.wikipedia.org/wiki/Crohn%27s_disease), a
+    lifelong condition where parts of the digestive system become
+    inflamed. Twenty-five of people are in the early stages of diagnosis
+    and 25 have started treatment. The variables in the dataset are:
 
-2. 💻 The data in [blood.csv](data-raw/blood.csv) are measurements of several 
-   blood parameters from fifty people with 
-   [Crohn's disease](https://en.wikipedia.org/wiki/Crohn%27s_disease), a 
-   lifelong condition where parts of the digestive system become inflamed. 
-   Twenty-five of people are in the early stages of diagnosis and 25 have 
-   started treatment. The variables in the dataset are:
-
-    -   sodium  - Sodium concentration in umol/L, the average of 5 technical 
-        replicates
+    -   sodium - Sodium concentration in umol/L, the average of 5
+        technical replicates
     -   potassium - Potassium concentration in umol/L, the average of 5
         technical replicates
-    -   B12 Vitamin - B12 in pmol/L, the average of 5 technical replicates
-    -   wbc - White blood cell count in 10^9 /L, the average of 5 technical 
+    -   B12 Vitamin - B12 in pmol/L, the average of 5 technical
         replicates
-    -   rbc count - Red blood cell count in	10^12 /L, the average of 5 
+    -   wbc - White blood cell count in 10\^9 /L, the average of 5
         technical replicates
-    -   platlet count - platlet count in	10^9 /L, the average of 5 technical
-        replicates
-    -   inflammation marker - the presence or absence of a marker of 
-        inflammation, either 0 or 1 
+    -   rbc count - Red blood cell count in 10\^12 /L, the average of 5
+        technical replicates
+    -   platlet count - platlet count in 10\^9 /L, the average of 5
+        technical replicates
+    -   inflammation marker - the presence or absence of a marker of
+        inflammation, either 0 or 1
     -   status - whether the individual is before or after treatment.
 
+    Your task is to summarise and plot these data in any suitable way.
+    Create a complete RStudio Project for an analysis of these data. You
+    will need to:
 
-
-    Your task is to summarise and plot these data in any suitable way. Create a 
-    complete RStudio Project for an analysis of these data. You will need to:
-
-    -   Make a new project 
+    -   Make a new project
     -   Make folders for data and for figures
     -   Import the data
-    -   Summarise and plot variables of your choice. It doesn't matter what 
-        you chose - the goal is the practice the project workflow and selecting
-        appropriate plotting and summarising methods for particular data sets.
+    -   Summarise and plot variables of your choice. It doesn't matter
+        what you chose - the goal is the practice the project workflow
+        and selecting appropriate plotting and summarising methods for
+        particular data sets.
+
+3.  The 2025 river data files are:
+
+    -   [algae.csv](river-data/algae.csv)
+    -   [nitrate.csv](river-data/nitrate.csv)
+    -   [phosphate.csv](river-data/phosphate.csv)
+    -   [bact.csv](river-data/bact.csv)
