--- a/r4babs2/week-1/overview.qmd
+++ b/r4babs2/week-1/overview.qmd
@@ -8,10 +8,11 @@ editor:
     wrap: 72
 ---
 
-This week we will cover the logic of consider the logic of hypothesis
-testing and type 1 and type 2 errors. We will also find out what the
-sampling distribution of the mean and the standard error are, and how to
-calculate confidence intervals.
+This week, we dive into the core logic of hypothesis testing. You will
+learn to navigate the risks of Type I and Type II errors and understand
+the mechanics behind the sampling distribution of the mean. Finally, we
+will apply these concepts to calculate standard error and build
+confidence intervals
 
 ![Artwork by @allison_horst: "type 1
 error"](images/type-1-error.png){fig-alt="A cute population with a normal distribution with two samples, one which happens to have at mean at the low end of the population and one at the high end. The population is saying 'yes, I'm still sure I birthed both you'. Because these samples are relatively rare - would happen less than 5% of the time - we would conclude they did not come from this population. That would be making a type 1 error."
