correction to a section link: need page for @sec- to work on a quarto website (unlike book) closes #71

--- a/r4babs2/week-4/workshop.qmd
+++ b/r4babs2/week-4/workshop.qmd
@@ -319,8 +319,11 @@ We will again use both our `seal` and `seal_summary` dataframes.
 ![](images/do_in_R.png) Create the plot
 
 ::: callout-tip
-Use method 1 (see [@sec-week-3-annotation-method-1]) OR method 2 (see
-[@sec-week-3-annotation-method-2]) to add the p value
+Use method 1 (see [method
+1](../week-3/workshop.qmd#sec-week-3-annotation-method-1)) OR Use method
+2 (see [method
+2](../week-3/workshop.qmd#sec-week-3-annotation-method-2)). to add the p
+value
 
 If you want to use method 2 for annotating the *p*-value, you can
 extract the *p*-value with
