reformat and add consolidation of vds set up

--- a/r4babs4/week-1/overview.qmd
+++ b/r4babs4/week-1/overview.qmd
@@ -5,26 +5,35 @@ toc: true
 toc-location: right
 ---
 
-This week the independent study to be done before the workshop is revision of some stage 1 core concepts. It covers file types, file systems,  working directories,  paths and RStudio Projects. You may feel completely confident with them but many students will benefit from a refresher. 
+This week the independent study to be done before the workshop is
+revision of some stage 1 core concepts. It covers file types, file
+systems, working directories, paths and RStudio Projects. You may feel
+completely confident with them but many students will benefit from a
+refresher.
 
-In the workshop we will cover Project organisation, working with data that has many variables and observations, getting an overview with summaries and distribution plots, and how to filter rows and columns.
-
+In the workshop we will cover Project organisation, working with data
+that has many variables and observations, getting an overview with
+summaries and distribution plots, and how to filter rows and columns.
 
 ### Learning objectives
 
 The successful student will be able to:
 
--    explain the organisation of files and directories in a file systems including root, home and working directories (revision)
+-   explain the organisation of files and directories in a file systems
+    including root, home and working directories (revision)
 
--   explain and appropriately use, absolute and relative file paths (revision)
+-   explain and appropriately use, absolute and relative file paths
+    (revision)
 
--   know how to use a project-oriented workflow to organise their work systematically and reproducibly
+-   know how to use a project-oriented workflow to organise their work
+    systematically and reproducibly
 
 -   explain the organisation of some typical "big data" files
 
 -   create summaries and plots to get an overview of a data set
 
--   filter rows from data sets for quality control, to remove missing data, or to select a subset of the data with work with
+-   filter rows from data sets for quality control, to remove missing
+    data, or to select a subset of the data with work with
 
 ### Instructions
 
@@ -33,18 +42,15 @@ The successful student will be able to:
     i.  📖 Read Understanding file systems (Stage 1 revision).
     ii. 📖 Read RStudio projects (Stage 1 revision).
 
-
 2.  [Workshop](workshop.qmd)
-    
-    i. 👩‍🏫 Find out why reproducible research matters and some tips for achieving it.  
+
+    i.  👩‍🏫 Find out why reproducible research matters and some tips for
+        achieving it.\
     ii. 👩‍🏫 Find out what big data are
     iii. 💻 Understand some data files that are typical of big data
-    iv. 💻 Learn how to filter a dataset and create summaries and plots to get an overview
-
+    iv. 💻 Learn how to filter a dataset and create summaries and plots
+        to get an overview
 
 3.  [Consolidate](study_after_workshop.qmd)
 
-    i.  💻 
-
-
-
+    i.  💻 Set up the Virtual Desktop if you have not already done so.
