--- a/r4babs4/week-2/study_before_workshop.qmd
+++ b/r4babs4/week-2/study_before_workshop.qmd
@@ -30,9 +30,9 @@ There are three Biomedical Sciences specific data analysis workshops
 ::: incremental
 These slides:
 
--   Prepare you for the workshop analysing the sample data....
-    and your own data, which is in the same format
-    
+-   Prepare you for the workshop analysing the sample data.... and your
+    own data, which is in the same format
+
 -   Summarise the experimental design and aims
 
 -   Explain what the data are
@@ -58,7 +58,7 @@ These slides:
 -   We measure TNF-α with a TNF-α antibody conjugated to Allophycocyanin
     (APC) - this will bind and fluoresce red
 
--   Therefore we also need a control for antibody binding and use 
+-   Therefore we also need a control for antibody binding and use
     Isotype antibody - this will bind but not fluoresce
 :::
 
@@ -106,7 +106,7 @@ These slides:
 -   You will have 6 FCS files, one for each combination of treatment and
     antibody
 
--   there are 16 variables in columns and up to 50000 cells in rows
+-   There are 16 variables in columns and up to 50000 cells in rows
 :::
 
 ## The data
@@ -114,8 +114,8 @@ These slides:
 :::: incremental
 ::: {style="font-size: 80%;"}
 -   the 16 columns: TIME, Time MSW, Pulse Width, FS Lin, FS Area, FS
-    Log, SS Lin, SS Area, SS Log, FL 1 Lin, FL 1 Area, FL 1 Log, 
-    FL 8 Lin, FL 8 Area, FL 8 Log, Event Count
+    Log, SS Lin, SS Area, SS Log, FL 1 Lin, FL 1 Area, FL 1 Log, FL 8
+    Lin, FL 8 Area, FL 8 Log, Event Count
 
 -   FS is Forward scatter, SS is Side scatter, FL is fluorescence
     channel
@@ -212,8 +212,8 @@ These slides:
 -   Sample data are like the data you will produce in your own
     experiment
 
--   3 treatments x 2 antibodies = 6 combinations; 4 variables upto 50000
-    cells each
+-   3 treatments x 2 antibodies = 6 combinations; 4 variables up to
+    50000 cells each
 
 -   The analysis is conceptually simple: quality control,
     transformation, scatter plots, and calculating percentages
