--- a/r4babs4/week-6/workshop.qmd
+++ b/r4babs4/week-6/workshop.qmd
@@ -12,7 +12,7 @@ In this workshop you will learn how to:
 
 -   create density plots to visualise the distribution and gating of the signals
 -   create a quadrant gated plot of TNFa_APC_Lin signal against the E_coli_FITC_Lin signal.
--   calculate the the percentage of cells in each quadrant
+-   calculate the percentage of cells in each quadrant
 -   annotate plots
 -   import from a googlesheet.
 
@@ -22,7 +22,7 @@ You should select plots to match your narrative and you may need to apply your u
 You should have the processed data files listed below for your own data/the model data.
 However, if you do not, you can use the linked files prepared from the sample data
 
--   [`clean_trans_live_tfna_pos.csv`](data-processed/clean_trans_live_tfna_pos.csv): Each row is a sample (a treatment-antibody combination). For each sample there is: the number of cells after AI cleaning, the number of live cells after gatting, the percentage of live cells, the number TNF-α postive cells, the percentage of TNF-α postive cells and the of the mean APC signal in the live cells and TNF-α postive cells
+-   [`clean_trans_live_tfna_pos.csv`](data-processed/clean_trans_live_tfna_pos.csv): Each row is a sample (a treatment-antibody combination). For each sample there is: the number of cells after AI cleaning, the number of live cells after gating, the percentage of live cells, the number TNF-α positive cells, the percentage of TNF-α positive cells and the mean APC signal in the live cells and TNF-α positive cells
 -   [`live_labelled.csv`](data-processed/live_labelled.csv): Each row is a cell. These are the AI cleaned, live cells with logicle-transformed TNFa_APC_Lin and E_coli_FITC_Lin signals. Each cell is labelled with the sample (filename) it came from, its treatment and antibody, and whether it is TNF-α positive (*i.e.* has a TNFa_APC_Lin level above the APC cut off used) or negative and whether it is FITC positive (*i.e.* E_coli_FITC_Lin level above the FITC cut off used) or negative.
 -   you may also have the FITC equivalent of `clean_trans_live_tfna_pos.csv`
 
@@ -53,7 +53,7 @@ clean_trans_live_n <- read_csv("data-processed/clean_trans_live_tfna_pos.csv")
 
 ```
 
-It can helpful to select only the columns we need, especially for the `clean_trans_live` data.
+It can be helpful to select only the columns we need, especially for the `clean_trans_live` data.
 These are: `FS_Lin`, `SS_Lin`, `E_coli_FITC_Lin`, `TNFa_APC_Lin`, `treatment`, `antibody`, `tnfa` and `fitc`
 
 🎬 Select columns of interest:
@@ -75,7 +75,7 @@ clean_trans_live <- clean_trans_live |>
 #| echo: false
 clean_trans_live |> 
   head(n = 100) |> 
-  knitr::kable(caption = "clean_trans_live: The AI cleaned, logical transformed, live, labelled cell data (first 100 rows only") |> 
+  knitr::kable(caption = "clean_trans_live: The AI cleaned, logical transformed, live, labelled cell data (first 100 rows only)") |> 
   kableExtra::kable_styling() |> 
   kableExtra::scroll_box(height = "200px")
 
@@ -402,7 +402,7 @@ clean_trans_live |>
                                round(mean_apc, 2))), 
             x = 4.8,
             y = 2,
-            colour = viridisLite::viridis(2, end = 0.8)[2])+
+            colour = viridisLite::viridis(2, end = 0.8)[2]) +
   scale_y_continuous(expand = c(0, 0),
                      limits = c(0, 2.5)) +
   scale_x_continuous(name = "Logicle transformed APC TNF-α signal") +
@@ -419,11 +419,11 @@ We created the figure below in [Week 2](../week-2/workshop.html#a-figure-to-repo
 
 ```{r}
 ggplot(clean_trans_live, aes(x = E_coli_FITC_Lin, 
-                                  y = TNFa_APC_Lin)) +
+                             y = TNFa_APC_Lin)) +
   geom_hex(bins = 128) +
   geom_hline(yintercept = apc_cut, 
              color = "red") +
-    geom_vline(xintercept = fitc_cut, 
+  geom_vline(xintercept = fitc_cut, 
              color = "red") +
   scale_fill_viridis_c() +
   facet_grid(antibody ~ treatment) +
@@ -431,12 +431,12 @@ ggplot(clean_trans_live, aes(x = E_coli_FITC_Lin,
 ```
 
 We might want to annotate this figure with the percentage of cells in each quadrant in each sample.
-To do that, we need to Calculate % of cells in each quadrant.
+To do that, we need to Calculate the % of cells in each quadrant.
 
-### Calculate % of cells in each quadrant
+### Calculate the % of cells in each quadrant
 
-We want to calculate the the percentage of cells in each quadrant of the quadrant gated plot of TNFa_APC_Lin signal against the E_coli_FITC_Lin signal.
-The means finding the number of cells labelled as:
+We want to calculate the percentage of cells in each quadrant of the quadrant gated plot of TNFa_APC_Lin signal against the E_coli_FITC_Lin signal.
+This means finding the number of cells labelled as:
 
 -   TNF-α -'ve and FITC -'ve
 -   TNF-α -'ve and FITC +'ve
@@ -446,10 +446,10 @@ The means finding the number of cells labelled as:
 ```{r}
 #| echo: false
 ggplot(clean_trans_live, aes(x = E_coli_FITC_Lin, 
-                                  y = TNFa_APC_Lin)) +
+                             y = TNFa_APC_Lin)) +
   geom_hline(yintercept = apc_cut, 
              color = "red") +
-    geom_vline(xintercept = fitc_cut, 
+  geom_vline(xintercept = fitc_cut, 
              color = "red") +
   scale_x_continuous(limits = c(1, 4.5)) +
   scale_y_continuous(limits = c(2.5, 6.5)) +
@@ -488,8 +488,7 @@ all_combin_n |>
 
 As there are four quadrants and six samples, you would expect 24 rows in the data frame.
 However, there are only 23 rows.
-This is because for one sample, TNFAPC-LPS.
-there are no cells in one quadrant, TNF-α -'ve FITC +'ve (the bottom right quadrant).
+This is because for one sample, TNFAPC-LPS, there are no cells in one quadrant, TNF-α -'ve FITC +'ve (the bottom right quadrant).
 Since we are probably happy not to annotate a figure with 0 %, this is fine.
 
 To calculate the percentage of cells in each quadrant, we need to join this dataframe with the number of non-debris cells for each sample, *i.e.,* `clean_trans_live_n`
@@ -543,7 +542,7 @@ You have a couple of options for importing this:
 ::: callout-important
 ## Google sheet closure
 
-The spreadsheet will be closed for input on **Friday 21 March (week 6)** so people can make conclusions about the class data without being concerned it will change.
+The spreadsheet will be closed for input on **1700** **Friday 20 March (week 6)** so people can make conclusions about the class data without being concerned it will change.
 :::
 
 ### Importing from a googlesheet
@@ -589,7 +588,7 @@ We did this in the [Data Analysis 1: Core](../week-1/workshop.html#quality-contr
 ## Analysis of the class data
 
 The class data has the summary statistics.
-You do not need to apply flowcytometry methods to these that.
+You do not need to apply flowcytometry methods to these data.
 You should be able to apply techniques you have learned in stage 1 to the class data.
 
 Stage 1
